# linkly

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: cache.py  config.py  database.py  main.py  models.py  queue.py  rate_limit.py  schemas.py  worker.py
backend/app/routers/: analytics.py  links.py  redirect.py
backend/app/services/: analytics.py  shortener.py
backend/app/utils/: shortcode.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/tests/: conftest.py  test_health.py  test_links.py  test_rate_limit.py  test_worker.py
docs/: architecture.md
frontend/: .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  postcss.config.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/[code]/: page.tsx
frontend/src/components/: AnalyticsChart.tsx  LinkTable.test.tsx  LinkTable.tsx  ShortenForm.tsx
frontend/src/lib/: api.ts
