[project]
name = "linkly-backend"
version = "0.1.0"
description = "FastAPI URL shortener + analytics service"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, comprehensions, pyupgrade
select = ["E", "F", "I", "B", "C4", "UP"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection defaults (Depends/Query/etc.) are the idiomatic
# pattern, so they should not trip B008 ("call in argument default").
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
